--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/nexus"]
 	path = src/nexus
 	url = https://github.com/RaidcoreGG/RCGG-lib-nexus-api
+[submodule "src/imgui"]
+	path = src/imgui
+	url = https://github.com/RaidcoreGG/imgui
