Potential fix for random crashes occuring during stale data detection

--- a/src/GW2Nexus-AddonTemplate.vcxproj
+++ b/src/GW2Nexus-AddonTemplate.vcxproj
@@ -122,6 +122,7 @@
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
